# git-standup-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: build-binaries.yml  release-plz.yml
src/: cli.rs  date.rs  git.rs  main.rs  output.rs  repo.rs
